// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders an outlined card 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(254, 247, 255, 1)",
      "borderRadius": 12,
      "shadowColor": "rgba(0, 0, 0, 1)",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(254, 247, 255, 1)",
        "borderRadius": 12,
        "flex": undefined,
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="surface"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "borderColor": "rgba(121, 116, 126, 1)",
          },
          {
            "borderWidth": 1,
            "height": "100%",
            "position": "absolute",
            "width": "100%",
            "zIndex": 2,
          },
          {
            "borderRadius": 12,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "flexShrink": 1,
          },
          undefined,
        ]
      }
      testID="card"
    />
  </View>
</View>
`;

exports[`Card renders an outlined card with custom border radius and color 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(254, 247, 255, 1)",
      "borderRadius": 32,
      "shadowColor": "rgba(0, 0, 0, 1)",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(254, 247, 255, 1)",
        "borderRadius": 32,
        "flex": undefined,
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="surface"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "borderColor": "purple",
          },
          {
            "borderWidth": 1,
            "height": "100%",
            "position": "absolute",
            "width": "100%",
            "zIndex": 2,
          },
          {
            "borderRadius": 32,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "flexShrink": 1,
          },
          undefined,
        ]
      }
      testID="card"
    />
  </View>
</View>
`;

exports[`animated value changes correctly 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(254, 247, 255, 1)",
      "borderRadius": 12,
      "shadowColor": "rgba(0, 0, 0, 1)",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    accessibilityLabel="card"
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(254, 247, 255, 1)",
        "borderRadius": 12,
        "flex": undefined,
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="surface"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "borderColor": "rgba(121, 116, 126, 1)",
          },
          {
            "borderWidth": 1,
            "height": "100%",
            "position": "absolute",
            "width": "100%",
            "zIndex": 2,
          },
          {
            "borderRadius": 12,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "flexShrink": 1,
          },
          undefined,
        ]
      }
      testID="card"
    />
  </View>
</View>
`;

exports[`animated value changes correctly 2`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(254, 247, 255, 1)",
      "borderRadius": 12,
      "shadowColor": "rgba(0, 0, 0, 1)",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
      "transform": [
        {
          "scale": 1.5,
        },
      ],
    }
  }
>
  <View
    accessibilityLabel="card"
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(254, 247, 255, 1)",
        "borderRadius": 12,
        "flex": undefined,
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="surface"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "borderColor": "rgba(121, 116, 126, 1)",
          },
          {
            "borderWidth": 1,
            "height": "100%",
            "position": "absolute",
            "width": "100%",
            "zIndex": 2,
          },
          {
            "borderRadius": 12,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "flexShrink": 1,
          },
          undefined,
        ]
      }
      testID="card"
    />
  </View>
</View>
`;
